--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ header p {
   font-size: 1.2rem;
   color: #5a5a5a;
 }
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 
 /* Section Styling */
 section {
