--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ header p {
   font-size: 1.2rem;
   color: #5a5a5a;
 }
-.container {
+.max-content {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 40px 20px;
 }
 
 
